Fix icon alignment

--- a/.config/eww/eww.scss
+++ b/.config/eww/eww.scss
@@ -134,12 +134,18 @@ tooltip {
   background-color: #313244;
   min-width: 50px;
   min-height: 50px;
-  border-radius: 50%;
+  border-radius: 10%;
   color: #cdd6f4;
   padding: 0;
-  margin: 5px;
-  font-size: 24px;
+  font-size: 20px;
   transition: all 0.2s;
+  margin: 5px;
+}
+
+.circle-btn > label {
+  margin: 0;
+  padding: 0;
+  margin-left: 6px;
 }
 
 .circle-btn:hover {
